--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "url": "https://github.com/Microsoft/BotBuilder-Samples.git"
     },
     "dependencies": {
+        "@microsoft/microsoft-graph-client": "^2.2.1",
         "@microsoft/recognizers-text-data-types-timex-expression": "1.1.4",
         "adaptivecards": "^2.6.0",
         "botbuilder": "~4.11.0",
@@ -24,6 +25,7 @@
         "botbuilder-testing": "~4.11.0",
         "dotenv": "^8.2.0",
         "moment-timezone": "^0.5.32",
+        "msal": "^1.4.4",
         "restify": "~8.5.1",
         "trakt.tv": "^8.0.0"
     },
