--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "A bot that demonstrates core AI capabilities",
     "author": "Microsoft",
     "license": "MIT",
-    "main": "index.js"
+    "main": "index.js",
     "scripts": {
         "start": "node ./index.js",
         "watch": "nodemon ./index.js",
