--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     },
     "dependencies": {
         "@azure/cosmos": "^3.9.5",
+        "@azure/msal": "^1.4.5",
+        "@azure/msal-browser": "^2.11.1",
         "@microsoft/microsoft-graph-client": "^2.2.1",
         "@microsoft/recognizers-text-data-types-timex-expression": "1.1.4",
         "adaptivecards": "^2.6.0",
